--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "server/main.go",
+            "program": "main.go",
             "env": {
                 "ENV": "local",
                 "HST_RGN":"us",
